@@ -1,5 +1,9 @@
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* assert.h [_ENABLE_TESTS]: Handle as done with [_L4_TEST_ENVIRONMENT].
+	* errno.h [_ENABLE_TESTS]: Handle specially.
+	* features.h [_ENABLE_TESTS]: Use the system's standard file instead.
+	
 	* sys/cdefs.h: New file, from today's glibc CVS HEAD.
 	[_ENABLE_TESTS]: Use the system's standard file instead.
 	* bits/wchar.h: Likewise.
